# django13

./: pyproject.toml
app_homework/: manage.py
app_homework/app_homework/: asgi.py  settings.py  urls.py  wsgi.py
app_homework/quotes/: models.py  urls.py  views.py
app_homework/quotes/migrations/: 0001_initial.py  0002_initial.py
app_homework/quotes/static/quotes/: style.css
app_homework/quotes/templates/quotes/: author_detail.html  base.html  index.html  quote_detail.html
app_homework/scraping/: beautiful_soup.py  urls.py  views.py
app_homework/scraping/templates/scraping/: views_scraping.html
app_homework/user/: forms.py  urls.py  views.py
app_homework/user/templates/user/: add_quote.html  login.html  logout.html  password_reset_complete.html  register.html
app_homework/utils/: migration.py
